--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 node_modules
 _site
 bun.lockb
-package-lock.json
 .DS_Store
 # Logs
 logs
@@ -16,5 +15,7 @@ npm-debug.log_
 .env.production.local
 .env.local
 
-
-
+# Folder
+Components
+Documentations
+_old
