--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "tiny-11ty-starter",
-  "version": "0.1",
+  "name": "11ty-tailwind-svelte-starter",
+  "version": "1.0.0",
   "type": "module",
-  "devDependencies": {
-    "@11ty/eleventy": "canary",
-    "esbuild": "latest",
-    "html-minifier-terser": "latest",
-    "lightningcss": "latest",
-    "glob": "latest",
-    "chokidar": "latest",
-    "svelte": "next",
-    "esbuild-svelte": "latest"
-  },
   "scripts": {
-    "dev": "eleventy --serve",
-    "build": "eleventy"
+    "dev": "rm -rf _site && bunx eleventy --serve",
+    "build": "rm -rf _site && bunx eleventy",
+    "stop-server": "lsof -ti :4321 | xargs kill"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "svelte": "^5.20.0",
+    "@11ty/eleventy": "^3.0.0",
+    "tailwindcss": "^4.0.6",
+    "@tailwindcss/vite": "^4.0.6",
+    "@11ty/eleventy-plugin-vite": "^6.0.0"
   }
 }
